# Library

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-db.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
apps/: main.py
apps/api/: author.py  book.py  borrow.py
apps/core/: dependency.py  settings.py
apps/crud/: author.py  book.py  borrow.py  common.py
apps/models/: __init__.py  author.py  base.py  book.py  borrow.py
apps/schemas/: author.py  book.py  borrow.py
apps/services/: author.py  book.py  borrow.py
apps/tests/: conftest.py  factory.py  test_author.py  test_book.py  test_borrow.py  utils.py
